2008-05-29	Diego Ongaro <ongardie@gmail.com>

	* panel-plugin/datetime.c: Always update every second when seconds are
	shown (Bug #4117)

2008-05-27	Diego Ongaro <ongardie@gmail.com>

	* panel-plugin/datetime.c: "Fix tooltip hiding" uses gtk2.12 function,
	  put preprocessor #if around it
	* {,po/}ChangeLog, panel-plugin/*.{c,h}: formatting

2008-05-21	Diego Ongaro <ongardie@gmail.com>

	* panel-plugin/datetime.c:
	  - Remove date input (Bug #4023)
	  - Fix tooltip hiding

2008-05-18	Diego Ongaro <ongardie@gmail.com>

	* panel-plugin/datetime-dialog.c: Missing static keywords

2008-05-17	Diego Ongaro <ongardie@gmail.com>

	* panel-plugin/datetime-dialog.c:
	  - translate strings in combo boxes
	* panel-plugin/datetime.c:
	  - Use GtkToggleButton in panel (Bug #3456)
	  - handle delete event on popup calendar (patch from Mike Massonet)
	  - show popup calendar on all workspaces (patch from Mike Massonet)
	  - allow ctrl-click on plugin (patch from Mike Massonet)

2008-05-02	Diego Ongaro <ongardie@gmail.com>

	* panel-plugin/datetime.c:
	  - fix memory leak with double-g_strdup of setting strings
	  - handle NULL from xfce_rc_simple_open,
	* panel-plugin/datetime.h: Use GtkTooltips type (fixes build)

2007-04-07	Remco den Breeje <remco@sx.mine.nu>

	* panel-plugin/datetime.{c,h}, 
	* panel-plugin/datetime-dialog.c: Enable tooltips. Based 
	on a patch by Laurent Meunier <meunier.laurent@laposte.net> (#3073)

2007-04-02	Remco den Breeje <remco@sx.mine.nu>

	* THANKS: added contributors
	* panel-plugin/datetime.c: Fix incorrect display when panel starts (#3062)

2007-03-02	Remco den Breeje <remco@sx.mine.nu>

	* THANKS: added contributors
	* LINGUAS,uk.po: Add Ukrainian translations by LuckAs <luckas_fb@mail.ru>

2007-01-13	Remco den Breeje <remco@sx.mine.nu>

	* release 0.5.0
	  User can choose a layout, added built-in formats of date
	  and time. Based on the patch for the clock-plugin by Nick Schermer and 
	  Brian Tarricone. 