@@ -37,7 +37,17 @@
 #include "datetime-dialog.h"
 
 #define USE_GTK_TOOLTIP_API     GTK_CHECK_VERSION(2,12,0)
+
 #define DATETIME_MAX_STRLEN 256
+
+/**
+ * Calculate the number of milliseconds from a GTimeVal.
+ * Anything smaller than one millisecond will be truncated.
+ */
+static inline gint64 datetime_gtimeval_to_ms(const GTimeVal t)
+{
+  return ((gint64) t.tv_sec * 1000) + ((gint64) t.tv_usec / 1000);
+}
 
 /*
  * Get date/time string
@@ -111,6 +121,7 @@ gboolean datetime_update(gpointer data)
   gchar *utf8str;
   struct tm *current;
   t_datetime *datetime;
+  guint wake_interval;  /* milliseconds to next update */
 
   if (data == NULL)
   {
@@ -118,6 +129,12 @@ gboolean datetime_update(gpointer data)
   }
 
   datetime = (t_datetime*)data;
+
+  /* stop timer */
+  if (datetime->timeout_id)
+  {
+    g_source_remove(datetime->timeout_id);
+  }
 
   g_get_current_time(&timeval);
   current = localtime((time_t *)&timeval.tv_sec);
@@ -184,6 +201,15 @@ gboolean datetime_update(gpointer data)
 #endif
       break;
   }
+
+  /*
+   * Compute the time to the next update and start the timer.
+   * The calculation finds the next larger integral multiple of the given update interval.
+   * This results in the next update occurring on the second or minute
+   * when the update interval is 1 or 60 seconds, respectively.
+   */
+  wake_interval = datetime->update_interval - datetime_gtimeval_to_ms(timeval) % datetime->update_interval;
+  datetime->timeout_id = g_timeout_add(wake_interval, datetime_update, datetime);
 
   return TRUE;
 }
@@ -455,19 +481,14 @@ void datetime_apply_format(t_datetime *datetime,
       gtk_widget_show(GTK_WIDGET(datetime->time_label));
   }
 
-  if (datetime->timeout_id)
-  {
-    g_source_remove(datetime->timeout_id);
-  }
-
   if (datetime_format_has_seconds(datetime->date_format) ||
       datetime_format_has_seconds(datetime->time_format))
   {
-    datetime->timeout_id = g_timeout_add(1000, datetime_update, datetime);
+    datetime->update_interval = 1000; /* 1 second */
   }
   else
   {
-    datetime->timeout_id = g_timeout_add(10000, datetime_update, datetime);
+    datetime->update_interval = 60000; /* 1 minute */
   }
 }
 
@@ -621,6 +642,7 @@ static t_datetime * datetime_new(XfcePanelPlugin *plugin)
   gtk_widget_show_all(datetime->button);
 
   /* set date and time labels */
+  datetime->timeout_id = 0;
   datetime_update(datetime);
 
   return datetime;
